# go_trek

./: dump.rdb  main.py  pyproject.toml
backend/: booking_history_7.csv  celerybeat-schedule  dump.rdb  main.py  pyproject.toml  requirements.txt
backend/celery_app/: celery_app.py
backend/extensions/: extensions.py
backend/instance/: go_trek.db  my_database.db
backend/models/: models.py
backend/routes/admin/: admin_route.py
backend/routes/auth/: auth_routes.py
backend/src/admin/controller/: admin_controller.py
backend/src/admin/route/: admin_route.py
backend/src/auth/controller/: auth_controller.py
backend/src/auth/route/: auth_routes.py
backend/src/staff/controller/: controller.py
backend/src/staff/router/: router.py
backend/src/user/controller/: controller.py
backend/src/user/router/: router.py
backend/templates/: monthly_report.html
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: main.js
frontend/src/assets/: base.css  main.css
frontend/src/components/: AppNav.vue
frontend/src/components/admin/: AdminNav.vue  BookingSection.vue  StaffSection.vue  TrekSection.vue  UserSection.vue
frontend/src/components/user/: UserNav.vue
frontend/src/lib/: api.js
frontend/src/router/: index.js
frontend/src/stores/: auth.js
frontend/src/views/: IndexView.vue  LoginView.vue  SignupView.vue
frontend/src/views/admin/: BookingsPage.vue  DashboardPage.vue  StaffPage.vue  TreksPage.vue  UsersPage.vue
frontend/src/views/staff/: ParticipantsPage.vue  TreksPage.vue
frontend/src/views/user/: BookingDetailPage.vue  (+5 more)
