[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argon2-cffi>=25.1.0",
    "flask>=3.1.3",
    "flask-security>=5.8.1",
    "flask-security-too>=5.8.1",
    "flask-sqlalchemy>=3.1.1",
    "python-dotenv>=1.2.2",
    "routes>=2.5.1",
]
