[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "argon2-cffi>=25.1.0",
    "celery[redis]>=5.6.3",
    "flask>=3.1.3",
    "flask-cors>=6.0.5",
    "flask-mail>=0.10.0",
    "flask-security>=5.8.1",
    "flask-security-too>=5.8.1",
    "flask-sqlalchemy>=3.1.1",
    "python-dotenv>=1.2.2",
    "redis>=6.4.0",
    "routes>=2.5.1",
]
